fix layout issues in mainlayout

--- a/Services/neon-dashboard/Shared/MainLayout.razor.css
+++ b/Services/neon-dashboard/Shared/MainLayout.razor.css
@@ -35,7 +35,6 @@
     justify-content: flex-end;
     color: var(--c-fg);
 
-    width: 100%;
     height: 6vh;
         
 }
